Support windows builds